--- a/package.json
+++ b/package.json
@@ -1,37 +1,37 @@
-{
-  "name": "truvern-vendor-trust",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint --max-warnings=0 || true",
-    "prisma:generate": "prisma generate",
-    "prisma:push": "prisma db push",
-    "seed": "node scripts/bootstrap.mjs"
-  },
-  "dependencies": {
-    "@next-auth/prisma-adapter": "1.0.7",
-    "@prisma/client": "5.18.0",
-    "autoprefixer": "10.4.19",
-    "next": "14.2.10",
-    "next-auth": "4.24.7",
-    "postcss": "8.4.35",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "recharts": "2.12.7",
-    "resend": "3.4.0",
-    "stripe": "16.3.0",
-    "tailwindcss": "3.4.10",
-    "@aws-sdk/client-s3": "3.678.0",
-    "@aws-sdk/s3-request-presigner": "3.678.0",
-    "samlify": "2.8.11"
-  },
-  "devDependencies": {
-    "prisma": "5.18.0",
-    "typescript": "5.4.5",
-    "@types/node": "20.12.7",
-    "@types/react": "18.2.66",
-    "@types/react-dom": "18.2.22"
-  }
+﻿{
+    "name":  "truvern-vendor-trust",
+    "private":  true,
+    "scripts":  {
+                    "dev":  "next dev",
+                    "build":  "next build",
+                    "start":  "next start",
+                    "lint":  "next lint --max-warnings=0 || true",
+                    "prisma:generate":  "prisma generate",
+                    "prisma:push":  "prisma db push",
+                    "seed":  "node scripts/bootstrap.mjs"
+                },
+    "dependencies":  {
+                         "@next-auth/prisma-adapter":  "1.0.7",
+                         "@prisma/client":  "5.18.0",
+                         "autoprefixer":  "10.4.19",
+                         "next":  "14.2.10",
+                         "next-auth":  "4.24.7",
+                         "postcss":  "8.4.35",
+                         "react":  "18.2.0",
+                         "react-dom":  "18.2.0",
+                         "recharts":  "2.12.7",
+                         "resend":  "3.4.0",
+                         "stripe":  "^16",
+                         "tailwindcss":  "3.4.10",
+                         "@aws-sdk/client-s3":  "3.678.0",
+                         "@aws-sdk/s3-request-presigner":  "3.678.0",
+                         "samlify":  "2.8.11"
+                     },
+    "devDependencies":  {
+                            "prisma":  "5.18.0",
+                            "typescript":  "5.4.5",
+                            "@types/node":  "20.12.7",
+                            "@types/react":  "18.2.66",
+                            "@types/react-dom":  "18.2.22"
+                        }
 }
