--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
                          "react-dom":  "18.2.0",
                          "recharts":  "2.12.7",
                          "resend":  "3.4.0",
-                         "stripe":  "^16",
+                         "stripe":  "16.2.0",
                          "tailwindcss":  "3.4.10",
                          "@aws-sdk/client-s3":  "3.678.0",
                          "@aws-sdk/s3-request-presigner":  "3.678.0",
@@ -33,5 +33,8 @@
                             "@types/node":  "20.12.7",
                             "@types/react":  "18.2.66",
                             "@types/react-dom":  "18.2.22"
-                        }
+                        },
+    "overrides":  {
+                      "stripe":  "16.2.0"
+                  }
 }
