chore(api): harden Prisma routes (runtime=nodejs,dynamic), safe /api/invite/[token], ensure prisma generate

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "truvern-vendor-trust",
     "private": true,
     "scripts": {
+        "postinstall": "prisma generate",
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
