build(prisma): ensure prisma generate in build; force nodejs+dynamic and lazy prisma for /api/evidence/get-url

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "scripts": {
         "postinstall": "prisma generate",
         "dev": "next dev",
-        "build": "next build",
+        "build":"prisma generate && next build",
         "start": "next start",
         "lint": "next lint --max-warnings=0 || true",
         "prisma:generate": "prisma generate",
