--- a/package.json
+++ b/package.json
@@ -1,26 +1,39 @@
-{
-    "name":  "truvern",
-    "version":  "1.0.0",
-    "private":  true,
-    "scripts":  {
-                    "dev":  "next dev",
-                    "build":  "next build",
-                    "start":  "next start",
-                    "prisma:generate":  "prisma generate",
-                    "prisma:migrate":  "prisma migrate deploy",
-                    "prisma:seed":  "node prisma/seed.cjs"
-                },
-    "dependencies":  {
-                         "next":  "14.2.3",
-                         "react":  "18.2.0",
-                         "react-dom":  "18.2.0",
-                         "@prisma/client":  "^5.22.0"
-                     },
-    "devDependencies":  {
-                            "prisma":  "^5.22.0",
-                            "typescript":  "^5.6.2"
-                        },
-    "prisma":  {
-                   "seed":  "node prisma/seed.cjs"
-               }
+﻿{
+    "name": "truvern",
+    "version": "1.0.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "prisma generate && next build",
+        "start": "next start",
+        "prisma:generate": "prisma generate",
+        "prisma:migrate": "prisma migrate deploy",
+        "prisma:seed": "node prisma/seed.cjs"
+    },
+    "dependencies": {
+        "@aws-sdk/client-s3": "^3.913.0",
+        "@aws-sdk/s3-request-presigner": "^3.913.0",
+        "@next-auth/prisma-adapter": "^1.0.7",
+        "@prisma/client": "^5.22.0",
+        "next": "14.2.3",
+        "next-auth": "^4.24.11",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "recharts": "^3.3.0",
+        "resend": "^6.2.0",
+        "stripe": "^19.1.0",
+        "zod": "^4.1.12"
+    },
+    "devDependencies": {
+        "@types/react": "19.2.2",
+        "autoprefixer": "^10.4.21",
+        "postcss": "^8.5.6",
+        "prisma": "^5.22.0",
+        "tailwindcss": "^4.1.14",
+        "typescript": "^5.6.2"
+    },
+    "prisma": {
+        "seed": "node prisma/seed.cjs"
+    }
 }
+
