--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
         "@aws-sdk/client-s3": "^3.913.0",
         "@aws-sdk/s3-request-presigner": "^3.913.0",
         "@next-auth/prisma-adapter": "^1.0.7",
-        "@prisma/client": "^6.17.1",
+        "@prisma/client": "6.17.1",
+        "@sentry/nextjs": "^10.21.0",
         "@vercel/analytics": "^1.5.0",
         "@vercel/blob": "^2.0.0",
         "@vercel/speed-insights": "^1.2.0",
+        "date-fns": "^4.1.0",
+        "lucide-react": "^0.546.0",
         "next": "14.2.3",
         "next-auth": "^4.24.11",
         "react": "^18.2.0",
@@ -26,12 +29,19 @@
         "zod": "^4.1.12"
     },
     "devDependencies": {
-        "@tailwindcss/postcss": "^4.1.14",
-        "@types/react": "19.2.2",
-        "autoprefixer": "^10.4.19",
-        "postcss": "^8.4.31",
-        "prisma": "^6.17.1",
-        "tailwindcss": "^3.4.10",
-        "typescript": "^5.3.3"
+        "@types/node": "^24.9.1",
+        "@types/react": "^19.2.2",
+        "autoprefixer": "^10.4.21",
+        "css-loader": "^7.1.2",
+        "postcss": "^8.5.6",
+        "postcss-loader": "^7.3.4",
+        "prisma": "6.17.1",
+        "style-loader": "^4.0.0",
+        "tailwindcss": "^3.4.18",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.9.3"
+    },
+    "prisma": {
+        "seed": "node prisma/seed.js"
     }
 }
